# talaty_scoring_platform

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
infra/compose/: Makefile  docker-compose.yml  env.template
infra/compose/scripts/: minio_sync.sh  pg_dump.sh  pg_restore.sh
schemas/v0/: bundle.json  dataset.json  dataset_version.json  feature.json  feature_set.json  feature_set_version.json  model.json  openapi.json  run.json  run_spec.json
scripts/: compose_smoke.py
services/api/: Dockerfile  alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 0001_init.py
services/api/src/api/: __init__.py  auth.py  config.py  main.py  openapi_export.py  schemas.py
services/api/src/api/db/: __init__.py  models.py  session.py
services/api/src/api/routes/: __init__.py  datasets.py  feature_sets.py  features.py  health.py  run_specs.py  runs.py  schemas.py
services/runner/: Dockerfile  pyproject.toml
services/runner/src/runner/: __init__.py  api.py  cli.py  config.py  db.py  runtime.py  store.py
services/web/: Dockerfile  index.html  package.json
services/web/src/: App.tsx  index.css
services/web/src/api/: client.ts
services/web/src/pages/: Datasets.tsx  FeatureSets.tsx  Login.tsx  Models.tsx  Runs.tsx
tests/: test_api_smoke.py  test_schema_exports.py
