[project]
name = "talaty-api"
version = "0.1.0"
description = "FastAPI service for the Talaty scoring platform."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111,<1",
  "uvicorn[standard]>=0.30,<1",
  "sqlalchemy>=2.0,<3",
  "alembic>=1.13,<2",
  "psycopg[binary]>=3.1,<4",
  "pydantic>=2.6,<3",
  "pydantic-settings>=2.2,<3",
  "python-dotenv>=1.0,<2",
  "httpx>=0.27,<1",
]

[project.scripts]
talaty-export-openapi = "api.openapi_export:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

